[gd_scene load_steps=14 format=2]

[ext_resource path="res://source/global/Audio.gd" type="Script" id=1]
[ext_resource path="res://audio/sfx/playerDamaged.wav" type="AudioStream" id=2]
[ext_resource path="res://audio/sfx/startBlink.wav" type="AudioStream" id=3]
[ext_resource path="res://audio/sfx/endBlink.wav" type="AudioStream" id=4]
[ext_resource path="res://audio/sfx/btnHover.wav" type="AudioStream" id=5]
[ext_resource path="res://audio/sfx/btnPress.wav" type="AudioStream" id=6]
[ext_resource path="res://addons/mixing-desk/music/mixing_desk_music.gd" type="Script" id=7]
[ext_resource path="res://addons/mixing-desk/music/mdm_icon.png" type="Texture" id=8]
[ext_resource path="res://addons/mixing-desk/music/song.gd" type="Script" id=9]
[ext_resource path="res://addons/mixing-desk/music/song_icon.png" type="Texture" id=10]
[ext_resource path="res://addons/mixing-desk/music/containers/core_cont.gd" type="Script" id=11]
[ext_resource path="res://audio/music/menuLoop.wav" type="AudioStream" id=12]
[ext_resource path="res://audio/music/combatLoop.wav" type="AudioStream" id=13]

[node name="Audio" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="SFX" type="Node" parent="."]

[node name="Player" type="Node" parent="SFX"]

[node name="Hurt" type="AudioStreamPlayer" parent="SFX/Player"]
stream = ExtResource( 2 )
bus = "Effects"

[node name="BlinkStart" type="AudioStreamPlayer" parent="SFX/Player"]
stream = ExtResource( 3 )
bus = "Effects"

[node name="BlinkEnd" type="AudioStreamPlayer" parent="SFX/Player"]
stream = ExtResource( 4 )
bus = "Effects"

[node name="Button" type="Node" parent="SFX"]

[node name="Hover" type="AudioStreamPlayer" parent="SFX/Button"]
stream = ExtResource( 5 )
volume_db = -8.0
bus = "Effects"

[node name="Pressed" type="AudioStreamPlayer" parent="SFX/Button"]
stream = ExtResource( 6 )
volume_db = -2.0
bus = "Effects"

[node name="Menu" type="Node" parent="SFX"]

[node name="Open" type="AudioStreamPlayer" parent="SFX/Menu"]
stream = ExtResource( 6 )
bus = "Effects"

[node name="Close" type="AudioStreamPlayer" parent="SFX/Menu"]
stream = ExtResource( 6 )
bus = "Effects"

[node name="GunShot" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 6 )
bus = "Effects"

[node name="MixingDeskMusic" type="Node" parent="."]
script = ExtResource( 7 )
__meta__ = {
"_editor_icon": ExtResource( 8 )
}

[node name="menuMusic" type="Node" parent="MixingDeskMusic"]
script = ExtResource( 9 )
__meta__ = {
"_editor_icon": ExtResource( 10 )
}
tempo = 120
bars = 55
beats_in_bar = 4
transition_beats = 4.0
loop = true

[node name="CoreContainer" type="Node" parent="MixingDeskMusic/menuMusic"]
script = ExtResource( 11 )
__meta__ = {
"_editor_icon": ExtResource( 10 )
}

[node name="baseMenuMusic" type="AudioStreamPlayer" parent="MixingDeskMusic/menuMusic/CoreContainer"]
stream = ExtResource( 12 )
volume_db = -2.0
bus = "Music"

[node name="levelMusic" type="Node" parent="MixingDeskMusic"]
script = ExtResource( 9 )
__meta__ = {
"_editor_icon": ExtResource( 10 )
}
tempo = 155
bars = 48
beats_in_bar = 4
transition_beats = 4.0
loop = true

[node name="CoreContainer" type="Node" parent="MixingDeskMusic/levelMusic"]
script = ExtResource( 11 )
__meta__ = {
"_editor_icon": ExtResource( 10 )
}

[node name="baseLevelMusic" type="AudioStreamPlayer" parent="MixingDeskMusic/levelMusic/CoreContainer"]
stream = ExtResource( 13 )
volume_db = -12.0
bus = "Music"
